add .button:hover to styles.css

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ ________________________________________________________________________________
     ___________________________________________________________________________________________   */
 .button {padding: 10px 15px; font-size: 14px; cursor: pointer; background-color: #afe0f0; 
                     color: #000000;border:0;border-radius: 5px;border-color: black;}
+.button:hover {background-color: #95cfe2;}
 
     /*        Шрифт в таблице.
     ___________________________________________________________________________________________   */
