--- a/styles.css
+++ b/styles.css
@@ -32,13 +32,14 @@
     /*        Кнопка.
     ___________________________________________________________________________________________   */
 .button {padding: 10px 15px; font-size: 14px; cursor: pointer; background-color: #afe0f0; 
-                    color: #000000;border:0;border-radius: 5px;border-color: black;}
-.button:hover {background-color: #95cfe2;}
+                    color: rgb(41, 41, 41);border:0;border-radius: 5px;border-color: black;}
+.button:hover {background-color: #95cfe2; color: #000000;}
 
-    /*        Шрифт в таблице.
+    /*        Таблицы.
     ___________________________________________________________________________________________   */
 
-.table-font-size {font-size:14px;}
+.table-font-size {font-size:14px;} /* Размер шрифта. */
+th, td {text-align: left; padding-left: 10px; padding-right:10px /* Выравнивание по левому краю текста в столбцах, и отступы между столбцами.*/}
 
 
 /*   Фиксы для разных разрешений экрана.
@@ -48,15 +49,16 @@
     ___________________________________________________________________________________________   */
 @media (max-width: 360px) {
     .button {padding: 10px 15px; font-size: 12px; cursor: pointer; background-color: #afe0f0; 
-        color: #000000;border:0;border-radius: 5px;border-color: black;}
+                    color: #000000;border:0;border-radius: 5px;border-color: black;}
     .table-font-size {font-size:12px;}
+    th, td {text-align: left; padding-left: 4px; padding-right:4px }
 }
 
     /*        Диапазон 361px - 767px ширино .
     ___________________________________________________________________________________________   */
 
 @media (min-width: 361px) and (max-width: 767px) {
-
+    th, td {text-align: left; padding-left: 2px; padding-right:2px }
 }
 
     /*        Только для 768px ширина.
