--- a/styles.css
+++ b/styles.css
@@ -2,69 +2,119 @@
 ============================================================================ */
 
 
-	/*	Body.	*/
-.body {font-family: Arial, sans-serif;
-	background-color: rgb(225, 246, 255);}
+/*	Body.	*/
+.body {
+  font-family: Arial, sans-serif;
+  background-color: rgb(225, 246, 255);
+}
 
 
-	/*	Контейнер для всей страницы. Формат А4.	*/
-.a4-container {max-width: 100%; width: 794px; margin: 0 auto;
-	box-sizing: border-box; padding: 25px;
-	background-color: rgb(255, 255, 255);
-	box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);}
+/*	Контейнер для всей страницы. Формат А4.	*/
+.a4-container {
+  max-width: 100%;
+  width: 794px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 25px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
 
 
-	/*	Контейнер для шапки с двумя колонками.	*/
-.container {display: grid; grid-template-columns: 1fr;}
-.left-column {grid-column: 1;}
-.right-column {grid-column: 2;}
-.inversion-column {grid-column: 1;}
+/*	Контейнер для шапки с двумя колонками.	*/
+.container {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.left-column { grid-column: 1; }
+.right-column { grid-column: 2; }
+
+.inversion-column { grid-column: 1; }
 
 
-	/*	Отступы.	*/
-.mr-10 {margin-right: 10px;}
-.mr-5 {margin-right: 5px;}
-.mr-0 {margin-right: 0px;}
+/*	Отступы.	*/
+.mr-10 { margin-right: 10px; }
+.mr-5 { margin-right: 5px; }
+.mr-0 { margin-right: 0px; }
 
-.mb-variable{margin-bottom: 60px;}
-.mb-10 {margin-bottom: 10px;}
-.mb-5 {margin-bottom: 5px;}
-.mb-0 {margin-bottom: 0px;}
+.mb-10 { margin-bottom: 10px; }
+.mb-5 { margin-bottom: 5px; }
+.mb-0 { margin-bottom: 0px; }
 
-.mt-variable{margin-top: 60px;}
-.mt-10 {margin-top: 10px;}
-.mt-5 {margin-top: 5px;}
-.mt-0 {margin-top: 0px;}
-.center {text-align: center;}
+.mt-10 {margin-top: 10px; }
+.mt-5 {margin-top: 5px; }
+.mt-0 {margin-top: 0px; }
 
+.mb-variable { margin-bottom: 60px; }
+.mt-variable {margin-top: 60px; }
 
-	/*	Фото.	*/
-.photo {justify-self: center; width: 150px; height: 150px; object-fit: cover;
-	border-radius: 10px;}
+.center {text-align: center; }
 
 
-	/*	Кнопка.	*/
-.button {padding: 14px 30px; font-size: 16px; cursor: pointer;
-	background-color: #afe0f0;color: rgb(41, 41, 41);border:0;
-	border-radius: 5px;border-color: black; text-decoration: none;
-	display: inline-block;}
-.button:hover {background-color: #95cfe2; color: #000000;}
+/*	Фото.	*/
+.photo {
+  justify-self: center;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+
+/*	Кнопка.	*/
+.button {
+  padding: 14px 30px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #afe0f0;
+  color: rgb(41, 41, 41);
+  border: 0;
+  border-radius: 5px;
+  border-color: black;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.button:hover {
+  background-color: #95cfe2;
+  color: #000000;
+}
 
 
 /*	Ссылка.	*/
-a {text-decoration: none; color: #22677d; font-weight:bold; cursor: pointer;
+a {
+  text-decoration: none;
+  color: #22677d;
+  font-weight: bold;
+  cursor: pointer;
 }
-a:hover, a:active {text-decoration: none; color: #3090af;}
+
+a:hover,
+a:active {
+  text-decoration: none;
+  color: #3090af;
+}
 
 
-	/*	Таблицы.	*/
-.table-container {display: grid; place-items: center;}
-		/* Размер шрифта. */
-.table-font-size {font-size:14px;}
-		/* Выравнивание по левому краю текста в столбцах,
-			 и отступы между столбцами.*/
-th, td {text-align: left; padding-bottom:0px; padding-left:18px;
-	padding-right:18px;}
+/*	Таблицы.	*/
+.table-container {
+  display: grid;
+  place-items: center;
+}
+
+/*	Размер шрифта.	*/
+.table-font-size { font-size: 14px; }
+
+/*	Выравнивание по левому краю текста в столбцах,
+			 и отступы между столбцами.	*/
+th,
+td {
+  text-align: left;
+  padding-bottom: 0px;
+  padding-left: 18px;
+  padding-right: 18px;
+}
 
 
 
@@ -72,33 +122,71 @@ th, td {text-align: left; padding-bottom:0px; padding-left:18px;
 ============================================================================ */
 
 
-	/*	До 360px ширина.	*/
+/*	До 360px ширина.	*/
 @media (max-width: 360px) {
-		.button {padding: 10px 15px; font-size: 12px;}
-		.table-font-size {font-size:12px;}
-		th, td {padding-bottom:1px; padding-left:4px; padding-right:4px;}
+	.table-font-size { font-size: 12px; }
+
+  .button {
+    padding: 10px 15px;
+    font-size: 12px;
+  }
+
+  th,
+  td {
+    padding-bottom: 1px;
+    padding-left: 4px;
+    padding-right: 4px;
+  }
 }
 
 
-	/*	Диапазон 361px - 767px ширино.	*/
+
+
+/*	Диапазон 361px - 767px ширино.	*/
 @media (min-width: 361px) and (max-width: 767px) {
-		th, td {padding-bottom:1px; padding-left:2px; padding-right:2px;}
+  th,
+  td {
+    padding-bottom: 1px;
+    padding-left: 2px;
+    padding-right: 2px;
+  }
 }
 
 
-	/*	Только для 768px ширина.	*/
+/*	Только для 768px ширина.	*/
 @media (width: 768px) {
-	.button {padding: 10px 15px; font-size: 12px;}
-	th, td {padding-bottom:0px; padding-left:14px; padding-right:14px;}
-	.photo {grid-column: 2; grid-row: span 3; width: 100%; height: auto;}
+  .button {
+    padding: 10px 15px;
+    font-size: 12px;
+  }
+
+  th,
+  td {
+    padding-bottom: 0px;
+    padding-left: 14px;
+    padding-right: 14px;
+  }
+
+  .photo {
+    grid-column: 2;
+    grid-row: span 3;
+    width: 100%;
+    height: auto;
+  }
 }
 
 
-	/*	От 768px.	*/
+/*	От 768px.	*/
 @media (min-width: 768px) {
-	.container {grid-template-columns: 1.5fr 1fr;}
-	.inversion-column {grid-column: 2;}
-	.photo {grid-column: 2; grid-row: span 4; width: 100%; height: auto;}
-	.table-font-size {font-size:16px;}
-	.mt-variable{margin-top: 40px;}
+	.container { grid-template-columns: 1.5fr 1fr; }
+  .inversion-column { grid-column: 2; }
+  .table-font-size { font-size: 16px; }
+  .mt-variable { margin-top: 40px; }
+
+  .photo {
+    grid-column: 2;
+    grid-row: span 4;
+    width: 100%;
+    height: auto;
+  }
 }
