--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,41 @@
 /*Публичные стили.
 ============================================================================ */
+:root {
+  --color-text: #e0e0e0;
+  --color-svg: black;
+  --color-svg-hover: white;
+  --color-body: linear-gradient(80deg, #000000, #5984c3);
+  --color-content: linear-gradient(90deg, #171e24, #2c3844, #9c9c9c);
+  --color-link: white;
+  --opacity-img: 0.8;
+}
+
+.lamp--on {
+  --color-text: black;
+  --color-svg: white;
+  --color-svg-hover: blue;
+  --color-body: white;
+  --color-content: white;
+  --opacity-img: 1;
+}
 
 /*Body.*/
 .body {
   font-family: Arial, sans-serif;
-  background-color: rgb(225, 246, 255);
+  background: var(--color-body);
+  color:var(--color-text);
 }
 
 /*Контейнер для всей страницы. Формат А4.*/
 .a4-container {
   max-width: 100%;
-  width: 794px;
+  width: 1280px;
   margin: 0 auto;
   box-sizing: border-box;
   padding: 25px;
-  background-color: rgb(255, 255, 255);
+  background: var(--color-content);
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
 
 /*Контейнер для шапки с двумя колонками.*/
@@ -42,18 +62,58 @@
 .mt-5 {margin-top: 5px; }
 .mt-0 {margin-top: 0px; }
 
+.m-25 {margin: 25px}
+
+.mx-a {margin-left: auto; margin-right: auto;}
+.ml-a {margin-left:auto}
+.ml-24 {margin-left: 24px;}
+
 .mb-variable { margin-bottom: 60px; }
 .mt-variable {margin-top: 60px; }
 
 .center {text-align: center; }
 
+.w-100 {width: 100%;}
+.w-90 {width: 90%;}
+
+.for-svg {
+  width: 24px;
+  height: 24px;
+  color: var(--color-svg) !important;
+}
+.for-svg:hover {
+  color: var(--color-svg-hover) !important;
+}
+
+.cursor-pointer {cursor: pointer;}
+
+/*Flex*/
+.display-flex { display: flex; }
+.flex-jc-start { justify-content: flex-start !important; }
+.flex-jc-center { justify-content: center !important; }
+.flex-jc-end { justify-content: flex-end !important; }
+.flex-jc-space-between { justify-content: space-between !important; }
+.flex-ai-start { align-items: flex-start !important; }
+.flex-ai-center { align-items: center !important; }
+.flex-ai-end { align-items: flex-end !important; }
+.flex-ai-baseline { align-items: baseline !important; }
+.flex-wrap { flex-wrap: wrap !important; }
+.flex-nowrap { flex-wrap: nowrap !important; }
+.flex-dir-column { flex-direction: column !important; }
+.flex-dir-row { flex-direction: row !important; }
+.flex-grow { flex-grow: 1; }
+.flex-shrink { flex-shrink: 1; }
+.gap-12 {gap: 12px;}
+
+/*Фото.*/
+.max-w-740 {max-width: 740px;}
 /*Фото.*/
 .photo {
   justify-self: center;
-  width: 150px;
-  height: 150px;
   object-fit: cover;
   border-radius: 10px;
+  max-width: 200px;
+  opacity: var(--opacity-img);
 }
 
 /*Кнопка.*/
@@ -78,7 +138,7 @@
 /*Ссылка.*/
 a {
   text-decoration: none;
-  color: #22677d;
+  color: var(--color-text);
   font-weight: bold;
   cursor: pointer;
 }
@@ -86,7 +146,7 @@ a {
 a:hover,
 a:active {
   text-decoration: none;
-  color: #3090af;
+  color: var(--color-link);
 }
 
 /*Таблицы.*/
@@ -96,7 +156,7 @@ a:active {
 }
 
 /*Размер шрифта.*/
-.table-font-size { font-size: 14px; }
+.table-font-size { font-size: 18px; }
 
 /*Выравнивание по левому краю текста в столбцах,
   и отступы между столбцами.*/
@@ -112,7 +172,7 @@ td {
 ============================================================================ */
 
 /*До 360px ширина.*/
-@media (max-width: 360px) {
+/* @media (max-width: 360px) {
 	.table-font-size { font-size: 12px; }
 
   .button {
@@ -129,7 +189,7 @@ td {
 }
 
 /*Диапазон 361px - 767px ширино.*/
-@media (min-width: 361px) and (max-width: 767px) {
+/* @media (min-width: 361px) and (max-width: 767px) {
   th,
   td {
     padding-bottom: 1px;
@@ -139,7 +199,7 @@ td {
 }
 
 /*Только для 768px ширина.*/
-@media (width: 768px) {
+/* @media (width: 768px) {
   .button {
     padding: 10px 15px;
     font-size: 12px;
@@ -155,13 +215,13 @@ td {
   .photo {
     grid-column: 2;
     grid-row: span 3;
-    width: 100%;
+    width: 60%;
     height: auto;
   }
-}
+} */
 
 /*От 768px.*/
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .container { grid-template-columns: 1.5fr 1fr; }
   .inversion-column { grid-column: 2; }
   .table-font-size { font-size: 16px; }
@@ -173,4 +233,4 @@ td {
     width: 100%;
     height: auto;
   }
-}
+} */
